--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
+AWS_ACCESS_KEY_ID=foo
+AWS_SECRET_ACCESS_KEY=bar
 AWS_REGION=us-east-1
 BUCKET_NAME=asdsdkcfbucket
 UPLOAD_TEMP_PATH=./uploads
