setup and testing

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-AWS_ACCESS_KEY_ID=foo
-AWS_SECRET_ACCESS_KEY=bar
 AWS_REGION=us-east-1
-BUCKET_NAME=asdsdkcfbucket
-UPLOAD_TEMP_PATH=./uploads
+BUCKET_NAME=s3-web-app-bucket
+UPLOAD_TEMP_PATH=/path/to/temp/upload/directory
+PORT=3000
