--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 AWS_REGION=us-east-1
 BUCKET_NAME=cccf-s3-web-app-bucket
-UPLOAD_TEMP_PATH=/path/to/temp/upload/directory
+UPLOAD_TEMP_PATH=./uploads
 PORT=3000
